--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
 
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
+
 *{
     margin: 0;
     padding: 0;
@@ -7,7 +9,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,wght@0,300;1,500;1,800&display=swap');
 
 body{
-    background-color: rgb(34, 30, 30);
+
     font-family: 'Roboto Serif', sans-serif;
 }
 
@@ -20,10 +22,14 @@ body{
     "titulo titulo"
     "section section"
     "img1 img2"
-    "img3 img4  "
     "footer footer"
     ;
     gap: 20px;
+}
+#header{
+    background-color: brown;
+    align-items: center;
+
 }
 
 header{ 
@@ -31,9 +37,10 @@ header{
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    background-color: brown;
     grid-area: header;
     height: 50px;
+    background-image: linear-gradient(to left, black, red);
+ 
 }
 
 .menuHeader ul {
@@ -45,7 +52,8 @@ header{
 /* menu */
 .menuHeader ul li a{
     text-decoration: none;
-    color: white;
+    color: rgb(22, 22, 22);
+    
 }
 .menuHeader ul li{
     list-style-type: none;
@@ -53,25 +61,39 @@ header{
 }
 
 .menuHeader ul li a:hover{
-    color: black;
+    color: rgb(248, 242, 242);
+    
 }
+.conteiner{
+    display: flex;
+    max-width: 300px;
+    justify-items: center;
+    align-items: center;
+    margin: auto;
+    
+}
+
 /* --------------- */
 .logo {
     margin-left: 5%;
+}
+.carousel-inner{
+   height: 200px;
+   object-fit: contain;
+    
 }
 
 .titulo {
     grid-area: titulo;
     text-align: center;
-    color: white;
+    color: rgb(22, 22, 22);
     padding-top: 50px;
-
 }
 
 .section{
     grid-area: section;
     text-align: center;
-    color: white;
+    color: rgb(51, 26, 26);
     padding: 0 25%;
 }
 .estiloImg{
@@ -80,40 +102,40 @@ header{
     align-items: center;
 }
 
+.estiloImg:hover{
+    transform: scale(1.5,1.5);
+   
+}
+
 .img1 {
     grid-area: img1;
     padding-left: 65%;
 }
+
+
 .img2 {
     grid-area: img2;
     padding-right: 65%;
 }
-.img3 {
-    grid-area: img3;
-    padding-left: 65%;
-}
-.img4 {
-    grid-area: img4;
-    padding-right: 65%;
-    
-}
 
 
+/* FOOTER */
 footer {
     grid-area: footer;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
-    background-color: brown;
-    height: 70px;
+    height: 150px;
     gap: 10%;
     padding: 10px 0;
+    background-image: linear-gradient(to left, black, red);
 }
 
 footer p{
     color:white
 }
+
 /* Medias Queris */
  
 @media screen and (max-width: 768px) {
@@ -147,7 +169,7 @@ header{
     align-items: center;
     background-color: brown;
     grid-area: header;
-    height: 110px;
+    height: 300px;
 }
 
 }
@@ -167,11 +189,15 @@ header{
     gap: 20px;  
     
 }
-
+.estiloImg-delicatessen:hover{
+    transform: scale(1.5,1.5);
+}
 .img1-delicatessen {
     grid-area: img1;
     
 }
+
+
 .img2-delicatessen {
     grid-area: img2;
 
