--- a/css/style.css
+++ b/css/style.css
@@ -1,166 +1,122 @@
-
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,wght@0,300;1,500;1,800&display=swap");
+* {
+  margin: 0;
+  padding: 0; }
 
-*{
-    margin: 0;
-    padding: 0;
-}
+* {
+  margin: 0;
+  padding: 0; }
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,wght@0,300;1,500;1,800&display=swap');
-
-body{
-
-    font-family: 'Roboto Serif', sans-serif;
-    
-}
+body {
+  font-family: 'Roboto Serif', sans-serif; }
 
 /* grilla index */
-.grillaggm{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-areas:
-    "header header"
-    "titulo titulo"
-    "section section"
-    "img1 img2"
-    "footer footer"
-    ;
-    gap: 20px;
-    background-color: rgb(230, 230, 200);
-    
-}
-#header{
-    background-color: brown;
-    align-items: center;
+npm
+.grillaggm {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-areas: "header header" "titulo titulo" "section section" "img1 img2" "footer footer";
+  gap: 20px;
+  background-color: #e6e6c8; }
 
-}
+#header {
+  background-color: brown;
+  align-items: center; }
 
-header{ 
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    grid-area: header;
-    height: 50px;
-    background-image: linear-gradient(to left, black, rgb(223, 72, 72));
- 
-}
+header {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  grid-area: header;
+  height: 50px;
+  background-image: linear-gradient(to left, black, #df4848); }
 
 .menuHeader ul {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center; }
 
-.menuHeader ul li a{
-    text-decoration: none;
-    color: white
-    
-}
-.menuHeader ul li{
-    list-style-type: none;
-    margin: 0 50px;
-}
+.menuHeader ul li a {
+  text-decoration: none;
+  color: #eef1ec; }
 
-.menuHeader ul li a:hover{
-    color: rgb(56, 51, 51);
-    
-}
-.conteiner{
-    display: flex;
-    max-width: 300px;
-    justify-items: center;
-    align-items: center;
-    margin: auto;
-    
-}
+.menuHeader ul li {
+  list-style-type: none;
+  margin: 0 50px; }
 
+.menuHeader ul li a:hover {
+  color: #383333; }
+
+.conteiner {
+  display: flex;
+  max-width: 300px;
+  justify-items: center;
+  align-items: center;
+  margin: auto; }
 
 .logo {
-    margin-left: 5%;
-}
-.carousel-inner{
-height: 200px;
-object-fit: contain;   
-}
+  margin-left: 5%; }
+
+.carousel-inner {
+  height: 200px;
+  object-fit: contain; }
 
 .titulo {
-    grid-area: titulo;
-    text-align: center;
-    color: rgb(22, 22, 22);
-    padding-top: 50px;
-}
+  grid-area: titulo;
+  text-align: center;
+  color: #161616;
+  padding-top: 50px; }
 
-.section{
-    grid-area: section;
-    text-align: center;
-    color: rgb(51, 26, 26);
-    padding: 0 25%;
-}
-.estiloImg{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+.section {
+  grid-area: section;
+  text-align: center;
+  color: #331a1a;
+  padding: 0 25%; }
 
-.estiloImg:hover{
-    transform: scale(1.5,1.5);
-}
+.estiloImg {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
+.estiloImg:hover {
+  transform: scale(1.5, 1.5); }
 
 .img1 {
-    grid-area: img1;
-    padding-left: 65%;
-}
-
+  grid-area: img1;
+  padding-left: 65%; }
 
 .img2 {
-    grid-area: img2;
-    padding-right: 65%;
-}
-
+  grid-area: img2;
+  padding-right: 65%; }
 
 /* FOOTER */
 footer {
-    grid-area: footer;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    height: 50px;
-    gap: 10%;
-    padding: 10px 0;
-    background-image: linear-gradient(to left, black, rgb(223, 72, 72));
-    color:white
-}
-
+  grid-area: footer;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  gap: 10%;
+  padding: 10px 0;
+  background-image: linear-gradient(to left, black, #df4848);
+  color: #eef1ec; }
 
 @media screen and (max-width: 768px) {
-    .grillaggm{
-        display: grid;
-        justify-content: center;
-        grid-template-columns: repeat(1, 1fr);
-        grid-template-areas:
-        "header"
-        "titulo"
-        "section"
-        "img1"
-        "img2"
-        "img3"
-        "img4"
-        "footer"
-        ;
-    
-
-    }
-    .menuHeader ul {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-
-}
-header{ 
+  .grillaggm {
+    display: grid;
+    justify-content: center;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-areas: "header" "titulo" "section" "img1" "img2" "img3" "img4" "footer"; }
+  .menuHeader ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; }
+  header {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -168,9 +124,8 @@ header{
     background-color: brown;
     grid-area: header;
     height: 400px;
-    gap: 10%;
-}
-footer {
+    gap: 10%; }
+  footer {
     grid-area: footer;
     display: flex;
     flex-direction: column;
@@ -179,113 +134,81 @@ footer {
     height: 150px;
     gap: 10%;
     padding: 10px 0;
-    background-image: linear-gradient(to left, black, rgb(223, 72, 72));
-    color:white
-}
-
-}
+    background-image: linear-gradient(to left, black, #df4848);
+    color: #eef1ec; } }
 
 /* Pagina delicatessen */
-.grillaggm-delicatessen{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-areas:
-    "header header header header"
-    "titulo titulo titulo titulo"
-    "img1 img2 img3 img4"
-    "img5 img6 img7 img8"
-    "img9 img9 img10 img10"
-    "footer footer footer footer"
-    ;
-    gap: 20px;  
-    background-color: rgb(230, 230, 200);
-    
-}
-.estiloImg-delicatessen:hover{
-    transform: scale(1.5,1.5);
-}
-.img1-delicatessen {
-    grid-area: img1;
-    color: rgb(18, 30, 41);
-    
-}
+.grillaggm-delicatessen {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-areas: "header header header header" "titulo titulo titulo titulo" "img1 img2 img3 img4" "img5 img6 img7 img8" "img9 img9 img10 img10" "footer footer footer footer";
+  gap: 20px;
+  background-color: #e6e6c8; }
 
+.estiloImg-delicatessen:hover {
+  transform: scale(1.5, 1.5); }
+
+.img1-delicatessen {
+  grid-area: img1;
+  color: #121e29; }
 
 .img2-delicatessen {
-    grid-area: img2;
-    color: rgb(18, 30, 41);
-}
+  grid-area: img2;
+  color: #121e29; }
+
 .img3-delicatessen {
-    grid-area: img3;
-    color: rgb(18, 30, 41);}
+  grid-area: img3;
+  color: #121e29; }
+
 .img4-delicatessen {
-    grid-area: img4;
-    color: rgb(18, 30, 41);
-    
-}
+  grid-area: img4;
+  color: #121e29; }
+
 .img5-delicatessen {
-    grid-area: img5;
-    color: rgb(18, 30, 41);}
+  grid-area: img5;
+  color: #121e29; }
+
 .img6-delicatessen {
-    grid-area: img6;
-    color: rgb(18, 30, 41);
-}
+  grid-area: img6;
+  color: #121e29; }
+
 .img7-delicatessen {
-    grid-area: img7;
-    color: rgb(18, 30, 41);}
+  grid-area: img7;
+  color: #121e29; }
+
 .img8-delicatessen {
-    grid-area: img8;
-    color: rgb(18, 30, 41);
-}
+  grid-area: img8;
+  color: #121e29; }
+
 .img9-delicatessen {
-    grid-area: img9;
-    color: rgb(18, 30, 41);    
-}
+  grid-area: img9;
+  color: #121e29; }
+
 .img10-delicatessen {
-    grid-area: img10;
-    color: rgb(18, 30, 41);}
+  grid-area: img10;
+  color: #121e29; }
 
 @media screen and (max-width: 768px) {
-    .grillaggm-delicatessen{
-        display: grid;
-        justify-content: center;
-        grid-template-columns: repeat(1, 1fr);
-        grid-template-areas:
-        "header"
-        "titulo"
-        "section"
-        "img1"
-        "img2"
-        "img3"
-        "img4"
-        "img5"
-        "img6"
-        "img7"
-        "img8"
-        "img9"
-        "img10"
-        "footer"
-        ;
-        align-items: center;
-
-    }
-    .menuHeader ul {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-}
-header{ 
+  .grillaggm-delicatessen {
+    display: grid;
+    justify-content: center;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-areas: "header" "titulo" "section" "img1" "img2" "img3" "img4" "img5" "img6" "img7" "img8" "img9" "img10" "footer";
+    align-items: center; }
+  .menuHeader ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; }
+  header {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     background-color: brown;
     grid-area: header;
-    height: 110px;
-    
-}
-footer {
+    height: 110px; }
+  footer {
     grid-area: footer;
     display: flex;
     flex-direction: column;
@@ -294,197 +217,134 @@ footer {
     height: 150px;
     gap: 10%;
     padding: 10px 0;
-    background-image: linear-gradient(to left, black, rgb(223, 72, 72));
-    color: white
+    background-image: linear-gradient(to left, black, #df4848);
+    color: #eef1ec; } }
 
-}
-}
-.grillaggm-contacto{
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    grid-template-areas:
-    "header"
-    "section"
-    "form"
-    "footer"
-    ;
-    
-}
+.grillaggm-contacto {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-template-areas: "header" "section" "form" "footer"; }
 
-form{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(140, 240, 223);   
-    grid-area: form;
-    height: 450px;
-}
-.section-contacto{
-    display: flex;
-    flex-direction: column;
-    
-    align-items: center;
-    grid-area: section;
-    background-color: rgb(140, 240, 223);
-    padding-top: 5px;
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #8cf0df;
+  grid-area: form;
+  height: 450px; }
 
-}
+.section-contacto {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  grid-area: section;
+  background-color: #8cf0df;
+  padding-top: 5px; }
+
 .menuHeader ul {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
-
-
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center; }
 
 @media screen and (max-width: 768px) {
-    .grillaggm-contacto{
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        grid-template-areas:
-        "header"
-        "section"
-        "form"
-        "footer"
-        ;
-        
-    }
-    
-    form{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        background-color: rgb(140, 240, 223);   
-        grid-area: form;
-        height: 450px;
-    }
-    .section-contacto{
-        display: flex;
-        flex-direction: column;
-        
-        align-items: center;
-        grid-area: section;
-        background-color: rgb(140, 240, 223);
-        padding-top: 5px;
-
-    }
-    .menuHeader ul {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-}
-}
+  .grillaggm-contacto {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-areas: "header" "section" "form" "footer"; }
+  form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #8cf0df;
+    grid-area: form;
+    height: 450px; }
+  .section-contacto {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    grid-area: section;
+    background-color: #8cf0df;
+    padding-top: 5px; }
+  .menuHeader ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; } }
 
 /* staff */
-.grillaggm-staff{
+.grillaggm-staff {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-template-areas: "header" "section" "footer"; }
+
+.section-staff {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #e6e6c8;
+  grid-area: form;
+  height: 650px; }
+
+.section-staff p {
+  padding: 25px 0; }
+
+@media screen and (max-width: 768px) {
+  .grillaggm-staff {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    grid-template-areas:
-    "header"
-    "section"
-    "footer"
-    ;
-    
-}
-
-.section-staff{
+    grid-template-areas: "header" "section" "footer"; }
+  .section-staff {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: rgb(230, 230, 200);   
+    background-color: #e6e6c8;
     grid-area: form;
-    height: 650px;
-}
-.section-staff p{
-    padding: 25px 0;
-}
-@media screen and (max-width: 768px) {
-    
-    .grillaggm-staff{
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        grid-template-areas:
-        "header"
-        "section"
-        "footer"
-        ;       
-    }
-    .section-staff{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        background-color: rgb(230, 230, 200);   
-        grid-area: form;
-        height: 630px;
-    }
-    .menuHeader ul {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-}
-}
+    height: 630px; }
+  .menuHeader ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; } }
+
 /* **************** */
-
 /* Quienes Somos */
+.grillaggm-quienesSomos {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-template-areas: "header" "section" "footer"; }
 
-.grillaggm-quienesSomos{
+.section-quienesSomos {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #e6e6c8;
+  grid-area: section;
+  height: 300px; }
+
+.section-quienesSomos h1 {
+  padding: 25px 0; }
+
+@media screen and (max-width: 768px) {
+  .grillaggm-quienesSomos {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    grid-template-areas:
-    "header"
-    "section"
-    "footer"
-    ;
-    
-}
-
-.section-quienesSomos{
+    grid-template-areas: "header" "section" "footer"; }
+  .section-quienesSomos {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: rgb(230, 230, 200);   
+    background-color: #e6e6c8;
     grid-area: section;
-    height: 300px;
-}
-
-.section-quienesSomos h1{
-    padding: 25px 0;
-}
-@media screen and (max-width: 768px) {
-    
-    .grillaggm-quienesSomos{
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        grid-template-areas:
-        "header"
-        "section"
-        "footer"
-        ;       
-    }
-    .section-quienesSomos{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        background-color: rgb(230, 230, 200);   
-        grid-area: section;
-        height: 850px;
-    }
-    .menuHeader ul {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-}
-
-
-}
-
+    height: 850px; }
+  .menuHeader ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; } }
