--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,7 +4,6 @@
 * {
     margin: 0;
     padding: 0; }
-  
 
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
@@ -36,6 +35,22 @@ body{
     background-color: $tercerColor;
     
 }
+
+@mixin navConMixin($diplay, $direccion, $justifi, $alineado, $alto,
+$gridarea, $aliniamiento, $colorFondo, $gap){
+
+    display: $diplay;
+    flex-direction: $direccion;
+    justify-content: $justifi;
+    align-items: $alineado;
+    height: $alto;
+    background-image: $colorFondo;
+    gap:$gap;
+
+
+}
+
+
 #header{
     background-color: brown;
     align-items: center;
@@ -50,7 +65,7 @@ header{
     grid-area: header;
     height: 50px;
     background-image: linear-gradient(to left, black, rgb(223, 72, 72));
- 
+
 }
 
 .menuHeader ul {
@@ -257,6 +272,7 @@ footer {
     .grillaggm-delicatessen{
         display: grid;
         justify-content: center;
+        align-items: center;
         grid-template-columns: repeat(1, 1fr);
         grid-template-areas:
         "header"
@@ -274,7 +290,7 @@ footer {
         "img10"
         "footer"
         ;
-        align-items: center;
+        
     }
     .menuHeader ul {
         display: flex;
@@ -458,9 +474,12 @@ form{
     justify-content: center;
     align-items: center;
     background-color: $tercerColor;   
-    grid-area: section;
-    height: 300px;
+ 
+    height: 600px;
 }
+
+
+
 
 .section-quienesSomos h1{
     padding: 25px 0;
