seo + mixin- extend

--- a/css/style.css
+++ b/css/style.css
@@ -42,17 +42,12 @@ body {
   font-family: 'Roboto Serif', sans-serif; }
 
 /* grilla index */
-npm
 .grillaggm {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-areas: "header header" "titulo titulo" "section section" "img1 img2" "footer footer";
   gap: 20px;
   background-color: #e6e6c8; }
-
-#header {
-  background-color: brown;
-  align-items: center; }
 
 header {
   display: flex;
@@ -122,7 +117,6 @@ header {
   grid-area: img2;
   padding-right: 65%; }
 
-/* FOOTER */
 footer {
   grid-area: footer;
   display: flex;
@@ -130,7 +124,6 @@ footer {
   justify-content: center;
   align-items: center;
   height: 50px;
-  gap: 10%;
   padding: 10px 0;
   background-image: linear-gradient(to left, black, #df4848);
   color: #eef1ec; }
@@ -153,9 +146,9 @@ footer {
     align-items: center;
     background-color: brown;
     grid-area: header;
-    height: 400px;
+    height: 450px;
     gap: 10%; }
-  footer {
+  .footer {
     grid-area: footer;
     display: flex;
     flex-direction: column;
@@ -241,7 +234,7 @@ footer {
   footer {
     grid-area: footer;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     height: 150px;
