--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,4 @@
+
 @import './variables';
 @import './header';
 
@@ -15,12 +16,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,wght@0,300;1,500;1,800&display=swap');
 
 body{
-
     font-family: 'Roboto Serif', sans-serif;
     
 }
 
-/* grilla index */npm
+/* grilla index */
 .grillaggm{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -47,15 +47,8 @@ $gridarea, $aliniamiento, $colorFondo, $gap){
     background-image: $colorFondo;
     gap:$gap;
 
-
 }
 
-
-#header{
-    background-color: brown;
-    align-items: center;
-
-}
 
 header{ 
     display: flex;
@@ -143,7 +136,7 @@ object-fit: contain;
 }
 
 
-/* FOOTER */
+
 footer {
     grid-area: footer;
     display: flex;
@@ -151,7 +144,7 @@ footer {
     justify-content: center;
     align-items: center;
     height: 50px;
-    gap: 10%;
+    
     padding: 10px 0;
     background-image: linear-gradient(to left, black, rgb(223, 72, 72));
     color:$mainColors
@@ -191,13 +184,13 @@ header{
     align-items: center;
     background-color: brown;
     grid-area: header;
-    height: 400px;
+    height: 450px;
     gap: 10%;
 }
-footer {
+.footer {
     grid-area: footer;
     display: flex;
-    flex-direction: column;
+    flex-direction:column;
     justify-content: center;
     align-items: center;
     height: 150px;
@@ -311,7 +304,7 @@ header{
 footer {
     grid-area: footer;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     height: 150px;
@@ -510,6 +503,4 @@ form{
         justify-content: center;
         align-items: center;
 }
-
-
 }
