--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,18 +2,17 @@
 @import './variables';
 @import './header';
 
-* {
-    margin: 0;
-    padding: 0; }
+
 
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
-*{
-    margin: 0;  
-    padding: 0;
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,wght@0,300;1,500;1,800&display=swap');
+
+* {
+    margin: 0;
+    padding: 0; 
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,wght@0,300;1,500;1,800&display=swap');
 
 body{
     font-family: 'Roboto Serif', sans-serif;
@@ -144,7 +143,6 @@ footer {
     justify-content: center;
     align-items: center;
     height: 50px;
-    
     padding: 10px 0;
     background-image: linear-gradient(to left, black, rgb(223, 72, 72));
     color:$mainColors
@@ -175,7 +173,6 @@ footer {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-
 }
 header{ 
     display: flex;
@@ -184,8 +181,8 @@ header{
     align-items: center;
     background-color: brown;
     grid-area: header;
-    height: 450px;
-    gap: 10%;
+    height: 110px;
+    
 }
 .footer {
     grid-area: footer;
@@ -193,7 +190,7 @@ header{
     flex-direction:column;
     justify-content: center;
     align-items: center;
-    height: 150px;
+    height: px;
     gap: 10%;
     padding: 10px 0;
     background-image: linear-gradient(to left, black, rgb(223, 72, 72));
@@ -315,6 +312,9 @@ footer {
 
 }
 }
+// contacto
+
+
 .grillaggm-contacto{
     display: grid;
     grid-template-columns: repeat(1, 1fr);
@@ -337,10 +337,7 @@ form{
     height: 450px;
 }
 .section-contacto{
-    display: flex;
-    flex-direction: column;
-    
-    align-items: center;
+    @extend .section;
     grid-area: section;
     background-color: $cuartoColor;
     padding-top: 5px;
@@ -380,7 +377,6 @@ form{
     .section-contacto{
         display: flex;
         flex-direction: column;
-        
         align-items: center;
         grid-area: section;
         background-color: $cuartoColor;
@@ -408,10 +404,7 @@ form{
 }
 
 .section-staff{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    @extend .section;
     background-color: $tercerColor;   
     grid-area: form;
     height: 650px;
@@ -467,7 +460,6 @@ form{
     justify-content: center;
     align-items: center;
     background-color: $tercerColor;   
- 
     height: 600px;
 }
 
